test/expected/lex_variable_segments.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand ":" "$foo" "$bar"]
  [CompoundListCondition, None]
    [SimpleCommand ":" "$foo" "$bar"]
  [CompoundListCondition, None]
    [SimpleCommand ":" "pre$foo" "lead$bartail"]
  [CompoundListCondition, None]
    [SimpleCommand ":" "a$bc$d"]
[Word
  Unquoted ":"
]
[Word
  Variable "foo"
]
[Word
  Variable "bar"
]
[Word
  Unquoted ":"
]
[Word
  Variable "foo"
]
[Word
  Variable "bar"
]
[Word
  Unquoted ":"
]
[Word
  Unquoted "pre"
  Variable "foo"
]
[Word
  DoubleQuoted "lead"
  Variable "bar"
  DoubleQuoted "tail"
]
[Word
  Unquoted ":"
]
[Word
  Unquoted "a"
  Variable "b"
  Unquoted "c"
  Variable "d"
]
shit: 2:3: error: Unable to expand 'foo' because the parameter is not set.
     2 |  : $foo ${bar}
       |    ^~~~ here.
